--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
+
+
 <!DOCTYPE html>
-
-
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-   
+    <!-- Table -->
     <table>
         <thead>
             <tr>
@@ -19,24 +19,24 @@
         </thead>
         <tbody>
             <tr>
-                <td>1001</td>
+                <td>101</td>
                 <td>Ram</td>
             </tr>
             <tr>
-                <td>1002</td>
+                <td>102</td>
                 <td>Shyam</td>
             </tr>
             <tr>
-                <td>1003</td>
-                <td>Sonu</td>
+                <td>103</td>
+                <td>Raju</td>
             </tr>
         </tbody>
     </table>
 
-   
-    <h2>List of Medias</h2>
+    <!-- Heading for Media List -->
+    <h2>List of Medias</h2>  <!-- Ensure this heading is present -->
 
-    
+    <!-- Ordered List -->
     <ol>
         <li>
             <img src="https://picsum.photos/id/123/200/300" alt="Random Image">
